--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1 class="title-1">Heloo World</h1>
+  <h1 class="title-1">Hello World</h1>
 </body>
 </html>
